; if you modify this file, add 'test' to the 'skip' field in drom.toml

(library
 (name lib_expect_tests)
 (preprocess
  (pps ppx_expect))
 (inline_tests
  (modes best)) ; add js for testing with nodejs
 (libraries yalo_lib ppx_yalo yalo_plugin_ocaml yalo_plugin_YALO yalo_plugin_FIND yalo_driver) ; add your project libraries here
 )
